--- a/client/src/containers/TeamsList/TeamsList.module.sass
+++ b/client/src/containers/TeamsList/TeamsList.module.sass
@@ -1,2 +1,9 @@
 .title
   margin: 20px 0
+.openModal
+  color: #007bff
+  text-decoration: none;
+  cursor: default
+  &:hover
+    color: #0056b3;
+    text-decoration: underline
